Clean up some things; remove RecorderUtil

--- a/AudioRecorder/res/values/strings.xml
+++ b/AudioRecorder/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="discard_recording">Discard</string>
     <string name="chronometer">Chronometer</string>
     <string name="default_record_timer">00:00</string>
-    <string name="previous_recordings">Previous Recordings</string>
-    <string name="unable_to_rename_file">Unable to rename file</string>
+    <string name="previous_recordings">Recordings</string>
+    <string name="unable_to_rename_file">Unable to rename file.</string>
     <string name="save_as">Save As</string>
     <string name="okay">OK</string>
+    <string name="stop">Stop</string>
 
 </resources>
