--- a/AudioRecorder/res/values/strings.xml
+++ b/AudioRecorder/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="in.uncode.android.audiorecorder.app_name">Audio Recorder</string>
+    <string name="in.uncod.android.audiorecorder.app_name">Audio Recorder</string>
     <string name="record">Record</string>
     <string name="preview">Preview</string>
     <string name="confirm_audio">Save</string>
